--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -26,21 +26,21 @@
 
   <strong>Descrição:</strong> {{ projeto.descricao|linebreaks }}
   {% if projeto.expectativas %}
-    <strong>Expectativas de resultados/entregas :</strong> {{ projeto.expectativas|linebreaks }}
+    <br><strong>Expectativas de resultados/entregas :</strong> {{ projeto.expectativas|linebreaks }}
   {% endif %}  
   {% if projeto.areas %}
-    <strong>Áreas da engenharia envolvidas no projeto (habilidade necessárias):</strong> {{ projeto.areas|linebreaks }}
+    <br><strong>Áreas da engenharia envolvidas no projeto (habilidade necessárias):</strong> {{ projeto.areas|linebreaks }}
   {% endif %}
   {% if projeto.recursos %}
-    <strong>Recursos a serem disponibilizados aos Alunos :</strong> {{ projeto.recursos|linebreaks }}
+    <br><strong>Recursos a serem disponibilizados aos Alunos :</strong> {{ projeto.recursos|linebreaks }}
   {% endif %}
   {% if projeto.anexo %}
-    <strong>Anexo :</strong>
+    <br><strong>Anexo :</strong>
     <a class="text-success" href="../..{{MEDIA_URL}}{{projeto.anexo}}">{{projeto.anexo}}</a>
   {% endif %}
   <hr>
 
-  <h3>Empresa: <a href="{% url 'organizacao_completo' projeto.empresa.login %}">{{ projeto.empresa.nome_empresa }}</a></h3>
+  <h3>Organização Parceira: <a href="{% url 'organizacao_completo' projeto.empresa.login %}">{{ projeto.empresa.nome_empresa }}</a></h3>
   <p><strong>endereço:</strong> <a class="tabulado" href="http://maps.google.com/maps?q={{projeto.empresa.endereco}}">{{ projeto.empresa.endereco|linebreaks }}</a></p>
   {% if projeto.empresa.website %}
     <p><strong>website:</strong>  <a class="tabulado" href="{{ projeto.empresa.website }}"> {{ projeto.empresa.website }} </a></p>
@@ -54,7 +54,7 @@
 
   {% if projeto.orientador %}
   <hr>
-  <h3>Orientadores</h3>
+  <h3>Orientador(es)</h3>
   <ul>
     <a href="{% url 'professor_detail' projeto.orientador.id %}">
       <li>{{ projeto.orientador.user.first_name }} {{ projeto.orientador.user.last_name }}</li>
@@ -63,24 +63,35 @@
   {% endif %}
 
   <hr>
-  <h3>Alunos Alocados no Projeto</h3>
+  <h3>Aluno(s) Alocado(s) no Projeto</h3>
   {% for alocacao in projeto.alocacao_set.all %}
-    <a href="{% url 'aluno_detail' alocacao.aluno.id %}"><p>{{alocacao.aluno.user.first_name}} {{alocacao.aluno.user.last_name}} &lt;{{alocacao.aluno.user.email}}&gt; [{{ alocacao.aluno.get_curso_display }}]</p></a>
+    <a href="{% url 'aluno_detail' alocacao.aluno.id %}">
+      <p>
+        {{alocacao.aluno.user.first_name}} {{alocacao.aluno.user.last_name}} 
+        &lt;{{alocacao.aluno.user.email}}&gt; 
+        [{{ alocacao.aluno.get_curso_display }}]
+        {% for opcao in alocacao.aluno.opcao_set.all %}
+          {% if opcao.projeto == projeto %}
+            (opção #{{opcao.prioridade}})
+          {% endif %}
+        {% endfor %}
+      </p>
+    </a>
   {% endfor %}
 
   <hr>
-  <h3>Alunos Aplicando para o Projeto</h3>
+  <h3>Aluno(s) Aplicando para o Projeto</h3>
   {% for opcao in projeto.opcao_set.all %}
     {% if projeto.ano == opcao.aluno.anoPFE and projeto.semestre == opcao.aluno.semestrePFE %}
-    <a href="{% url 'aluno_detail' opcao.aluno.id %}"><p class="{% if opcao.prioridade <= 5 %}green-bold{% else %}yellow-bold{% endif %}">{{opcao.aluno.user.first_name}} [{{ opcao.aluno.get_curso_display }}]&nbsp;=>&nbsp;prioridade #{{opcao.prioridade}}&nbsp;|&nbsp;{ {{opcao.aluno.anoPFE}}.{{opcao.aluno.semestrePFE}} }</p></a>
+    <a href="{% url 'aluno_detail' opcao.aluno.id %}"><p class="{% if opcao.prioridade <= 5 %}green-bold{% else %}yellow-bold{% endif %}">{{opcao.aluno.user.first_name}} [{{ opcao.aluno.get_curso_display }}]&nbsp;=>&nbsp;opção #{{opcao.prioridade}}&nbsp;|&nbsp;{ {{opcao.aluno.anoPFE}}.{{opcao.aluno.semestrePFE}} }</p></a>
     {% endif %}
   {% endfor %}
   <p style="line-height:2px">
-    ------------------------------------------------------------------------------------------
+    --------------------------------------------------------------------------------------
   </p>
   {% for opcao in projeto.opcao_set.all %}
     {% if projeto.ano != opcao.aluno.anoPFE or projeto.semestre != opcao.aluno.semestrePFE %}
-    <a href="{% url 'aluno_detail' opcao.aluno.id %}"><p class="red-bold">{{opcao.aluno.user.first_name}} [{{ opcao.aluno.get_curso_display }}]&nbsp;=>&nbsp;prioridade #{{opcao.prioridade}}&nbsp;|&nbsp;{ {{opcao.aluno.anoPFE}}.{{opcao.aluno.semestrePFE}} } </p></a>
+    <a href="{% url 'aluno_detail' opcao.aluno.id %}"><p class="red-bold">{{opcao.aluno.user.first_name}} [{{ opcao.aluno.get_curso_display }}]&nbsp;=>&nbsp;opção #{{opcao.prioridade}}&nbsp;|&nbsp;{ {{opcao.aluno.anoPFE}}.{{opcao.aluno.semestrePFE}} } </p></a>
     {% endif %}
   {% endfor %}
 
