--- a/projetos/templates/projetos/meuprojeto_aluno.html
+++ b/projetos/templates/projetos/meuprojeto_aluno.html
@@ -24,10 +24,10 @@
       {% else %}
           <h3>Título: {{alocado.projeto.titulo}}</h3>
       {% endif %}
-      <strong>Descrição:</strong> {{ alocado.projeto.descricao|linebreaks }}
-      <strong>Expectativas de resultados/entregas :</strong> {{ alocado.projeto.expectativas|linebreaks }}
-      <strong>Áreas da engenharia envolvidas no projeto (habilidade necessárias):</strong> {{ alocado.projeto.areas|linebreaks }}
-      <strong>Recursos a serem disponibilizados aos Alunos :</strong> {{ alocado.projeto.recursos|linebreaks }}
+      <strong>Descrição:</strong> {{ alocado.projeto.descricao|linebreaks }}<br>
+      <strong>Expectativas de resultados/entregas :</strong> {{ alocado.projeto.expectativas|linebreaks }}<br>
+      <strong>Áreas da engenharia envolvidas no projeto (habilidade necessárias):</strong> {{ alocado.projeto.areas|linebreaks }}<br>
+      <strong>Recursos a serem disponibilizados aos Alunos :</strong> {{ alocado.projeto.recursos|linebreaks }}<br>
       <hr>
 
       <h3>Empresa: {{ alocado.projeto.empresa.nome_empresa }}</h3>
