Ajuste para somente propor projetos do semestre.

--- a/users/templates/users/aluno_detail.html
+++ b/users/templates/users/aluno_detail.html
@@ -160,6 +160,8 @@
                     { {{opcao.projeto.ano}}.{{opcao.projeto.semestre}} }</p>
                 </a>
             {% endif %}
+                <p class="text-warning">Nenhum projeto selecionado para o semestre atual.<p>
+            {% else %}
         {% endfor %}
         <p style="line-height:2px">
             --------------------------------------------------------------------------------------
