Exibição dos alunos na lista de projetos do semestre.

--- a/users/templates/users/alunos_inscrevendo.html
+++ b/users/templates/users/alunos_inscrevendo.html
@@ -48,7 +48,7 @@
                     {% if opcao.projeto == aluno.alocacao_set.last.projeto %}
                       </u>
                     {% endif %}
-                    [{% mede_aderencia aluno opcao.projeto %}%]
+                    |{% mede_aderencia aluno opcao.projeto %}%|
                     <br>
                   {% endfor %}
                   "
