--- a/projetos/templates/projetos/propor.html
+++ b/projetos/templates/projetos/propor.html
@@ -17,12 +17,22 @@
     <div>      
       {% for projeto,opcoes in mylist %} 
         {% if projeto.disponivel %}
-          <a href="{% url 'completo' projeto.id %}" class="dark-blue-bold"> 
-              {% if projeto.titulo_final %}{{projeto.titulo_final}}{% else %}{{projeto.titulo}}{% endif %}
+          <a href="{% url 'completo' projeto.id %}" class="dark-blue-bold">
+            {% if projeto.titulo_final %}{{projeto.titulo_final}}{% else %}{{projeto.titulo}}{% endif %}
             ({{ projeto.empresa.nome_empresa }})
+            &nbsp;&nbsp;
+            |
+            {% if projeto.perfil_aluno1_computacao %}C{% endif %}{% if projeto.perfil_aluno1_mecatronica %}X{% endif %}{% if projeto.perfil_aluno1_mecanica %}M{% endif %}
+            |
+            {% if projeto.perfil_aluno2_computacao %}C{% endif %}{% if projeto.perfil_aluno2_mecatronica %}X{% endif %}{% if projeto.perfil_aluno2_mecanica %}M{% endif %}
+            |
+            {% if projeto.perfil_aluno3_computacao %}C{% endif %}{% if projeto.perfil_aluno3_mecatronica %}X{% endif %}{% if projeto.perfil_aluno3_mecanica %}M{% endif %}
+            |
+            {% if projeto.perfil_aluno4_computacao %}C{% endif %}{% if projeto.perfil_aluno4_mecatronica %}X{% endif %}{% if projeto.perfil_aluno4_mecanica %}M{% endif %}
+            |
           </a>
           {% for opcao in opcoes %} 
-            <li><a href="{% url 'aluno_detail' opcao.aluno.id %}">{{opcao.aluno.user.first_name}} [{{ opcao.aluno.get_curso_display }}]&nbsp;=>&nbsp;prioridade #{{opcao.prioridade}}</a></li>
+            <li><a href="{% url 'aluno_detail' opcao.aluno.id %}">{{opcao.aluno.user.first_name}} {{opcao.aluno.user.last_name}} [{{ opcao.aluno.get_curso_display }}]&nbsp;=>&nbsp;prioridade #{{opcao.prioridade}}</a></li>
           {% endfor %}
           <br><br>
         {% endif %}
@@ -45,7 +55,8 @@
     </form>
 
   {% else %}
-      <p>Não existem projetos disponíveis.</p>
-    {% endif %}
+    <p>Não existem projetos disponíveis.</p>
+  {% endif %}
+  <p>&nbsp;</p>
 
 {% endblock %}
