--- a/projetos/templates/projetos/bancas_lista.html
+++ b/projetos/templates/projetos/bancas_lista.html
@@ -54,8 +54,7 @@
         
           {% if banca.projeto.orientador %}
             <b>Orientador:</b> 
-              {{banca.projeto.orientador.user.first_name}} 
-              {{banca.projeto.orientador.user.last_name}} 
+              {{banca.projeto.orientador.user.get_full_name}} 
               <a href="mailto:{{banca.projeto.orientador.user.email}}">&lt;{{banca.projeto.orientador.user.email}}&gt;</a>
             <br>
           {% endif %}
@@ -64,19 +63,19 @@
           <ol>
             {% if banca.membro1 %}
             <li>
-              {{banca.membro1.first_name}} {{banca.membro1.last_name}}
+              {{banca.membro1.get_full_name}}
               <a href="mailto:{{banca.membro1.email}}">&lt;{{banca.membro1.email}}&gt;</a>
             </li>
             {% endif %}
             {% if banca.membro2 %}
             <li>
-              {{banca.membro2.first_name}} {{banca.membro2.last_name}}
+              {{banca.membro2.get_full_name}}
               <a href="mailto:{{banca.membro2.email}}">&lt;{{banca.membro2.email}}&gt;</a>
             </li>
             {% endif %}
             {% if banca.membro3 %}
             <li>
-              {{banca.membro3.first_name}} {{banca.membro3.last_name}}
+              {{banca.membro3.get_full_name}}
               <a href="mailto:{{banca.membro3.email}}">&lt;{{banca.membro3.email}}&gt;</a>
             </li>
             {% endif %}
@@ -86,7 +85,7 @@
             {% for alocacao in banca.projeto.alocacao_set.all %}
               <li>
                 <a href="{% url 'aluno_detail' alocacao.aluno.id %}">
-                  {{alocacao.aluno.user.first_name}} {{alocacao.aluno.user.last_name}}
+                  {{alocacao.aluno.user.get_full_name}}
                 </a>
                 <a href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a>
                 [{{ alocacao.aluno.get_curso_display }}]
