--- a/projetos/templates/projetos/propor.html
+++ b/projetos/templates/projetos/propor.html
@@ -32,7 +32,7 @@
             |
           </a>
           {% for opcao in opcoes %} 
-            <li><a href="{% url 'aluno_detail' opcao.aluno.id %}">{{opcao.aluno.user.first_name}} {{opcao.aluno.user.last_name}} [{{ opcao.aluno.get_curso_display }}]&nbsp;=>&nbsp;prioridade #{{opcao.prioridade}}</a></li>
+            <li><a href="{% url 'aluno_detail' opcao.aluno.id %}">{{opcao.aluno.user.get_full_name}} [{{ opcao.aluno.get_curso_display }}]&nbsp;=>&nbsp;prioridade #{{opcao.prioridade}}</a></li>
           {% endfor %}
           <br><br>
         {% endif %}
