--- a/projetos/templates/projetos/relatorio_alunos.html
+++ b/projetos/templates/projetos/relatorio_alunos.html
@@ -24,7 +24,7 @@
         {% for aluno in alunos %} 
         <div><pdf:nextpage /></div>
 
-        <h3>Aluno: {{aluno.user.first_name}}&nbsp;{{aluno.user.last_name}}</h3>
+        <h3>Aluno: {{aluno.user.get_full_name}}</h3>
         <strong>Curso:</strong> {{aluno.get_curso_display}} <br>
         <strong>CR:</strong> {{aluno.cr}} <br><br>
         <strong>Áreas de interesse selecionadas:</strong>
