--- a/users/templates/users/aluno_detail.html
+++ b/users/templates/users/aluno_detail.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-  <h3>{{aluno.user.first_name}}&nbsp;{{aluno.user.last_name}}</h3>
+  <h3>{{aluno.user.get_full_name}}</h3>
   <strong>e-mail:</strong> <a href="mailto:{{aluno.user.email}}"> &lt;{{aluno.user.email}}&gt;</a><br>
   {% if aluno.matricula %}
     <strong>Matrícula:</strong> {{aluno.matricula}}<br>
