--- a/users/templates/users/alunos_inscrevendo.html
+++ b/users/templates/users/alunos_inscrevendo.html
@@ -54,7 +54,7 @@
                   "
                 {% endif %}
               >
-                {{aluno.user.first_name}}&nbsp;{{aluno.user.last_name}}
+                {{aluno.user.get_full_name}}
               </a>
             </td>
             <td class="{% if aluno.curso == 'C' %}text-success{% elif aluno.curso == 'M' %}text-danger{% else %}text-warning{% endif %}">
