--- a/users/templates/users/professor_detail.html
+++ b/users/templates/users/professor_detail.html
@@ -6,7 +6,7 @@
 {% endcomment %}
 
 {% block content %}
-  <h3>{{professor.user.first_name}}&nbsp;{{professor.user.last_name}}</h3>
+  <h3>{{professor.user.get_full_name}}</h3>
   <strong>e-mail:</strong> <a href="mailto:{{professor.user.email}}"> &lt;{{professor.user.email}}&gt;</a><br>
   {% if professor.website %}
     <strong>website:</strong> <a href="{{ professor.website }}"> {{ professor.website }} </a><br>
