Index geral para o site do PFE

--- a/projetos/templates/base.html
+++ b/projetos/templates/base.html
@@ -32,7 +32,7 @@
 <body>
 
     {% url 'index_professor' as url_index_professor %}
-    {% url 'index' as url_index %}
+    {% url 'index_aluno' as url_index_aluno %}
     {% url 'perfil' as url_perfil %}
   
     <div class="topnav">
@@ -40,13 +40,13 @@
 
         <img 
         {% if user.is_authenticated %}
-          onclick="location.href='{% if user.tipo_de_usuario == 1 %}{{ url_index }}{% else %}{{ url_index_professor }}{% endif %}'"
+          onclick="location.href='{% if user.tipo_de_usuario == 1 %}{{ url_index_aluno }}{% else %}{{ url_index_professor }}{% endif %}'"
         {% endif %}
         src="{% static 'images/logoInsper.png' %}" alt="Insper" style="width:59px;height:23px;">
 
         <b 
         {% if user.is_authenticated %}
-          onclick="location.href='{% if user.tipo_de_usuario == 1 %}{{ url_index }}{% else %}{{ url_index_professor }}{% endif %}'"
+          onclick="location.href='{% if user.tipo_de_usuario == 1 %}{{ url_index_aluno }}{% else %}{{ url_index_professor }}{% endif %}'"
         {% endif %}
         id="pfelogo">PFE</b> 
 
@@ -58,7 +58,9 @@
       <div id="myLinks">
           {% if user.is_authenticated %}
 
-          <a href="{% url 'index'%}">Aluno</a>
+          <a href="{% url 'index'%}">Geral</a>
+          
+          <a href="{% url 'index_aluno'%}">Aluno</a>
 
           {% if perms.users.altera_professor %}
           <a href="{% url 'index_professor'%}">Professor</a>
