--- a/users/templates/users/alunos_lista.html
+++ b/users/templates/users/alunos_lista.html
@@ -125,10 +125,14 @@
           options: {
             responsive: true,
             title: {
-                  display: true,
-                  text: 'Proporção de áreas entre alunos',
-                  position: 'top'
-              },
+              display: true,
+              text: 'Proporção de áreas entre alunos',
+              position: 'top'
+            },
+            legend: {
+              display: true,
+              position: "bottom",
+            }
           }
         };
     
