quebra de página em relatório

--- a/projetos/templates/projetos/relatorio_alunos.html
+++ b/projetos/templates/projetos/relatorio_alunos.html
@@ -147,6 +147,7 @@
             </a>
           {% endfor %}
           <hr class="striped-border">
+          <p style="page-break-before: always">
 
         {% endfor %}
   
