Sistema de feedback das empresas.

--- a/projetos/templates/projetos/projeto_feedback.html
+++ b/projetos/templates/projetos/projeto_feedback.html
@@ -31,7 +31,7 @@
     <p>O projeto avançou conforme o esperado? Se SIM, você sabe qual foi a fórmula do sucesso?
     Se NÃO, consegue identificar os motivos? Por exemplo: demora em fechar o escopo, alunos
     pouco engajados, alunos com dúvidas básicas em determinado assunto, equipe não entrosada, ...</p>
-    <textarea name="avanco" rows="4" cols="80" maxlength="1000"></textarea>
+    <textarea name="tecnico" rows="4" cols="80" maxlength="1000"></textarea>
     <br><br>
 
     <p>Parte do esperado com essa atividade era que os alunos entendessem melhor qual era o desafio
@@ -39,20 +39,20 @@
     ativos em se comunicar, entendendo o desejo de vocês (e de seus usuários finais se for o
     caso) e discutir possíveis soluções? Você pode comentar brevemente como foram essas interações?
     </p>
-    <textarea name="ativos" rows="4" cols="80" maxlength="1000"></textarea>
+    <textarea name="comunicacao" rows="4" cols="80" maxlength="1000"></textarea>
     <br><br>
 
     <p>A equipe de alunos alocada para o seu projeto estava devidamente organizada? Por exemplo:
     os alunos foram pontuais nos encontros, se portaram de forma adequada, todos se dedicaram
     de acordo, apresentaram uma proposta de condução do projeto adequada?
     </p>
-    <textarea name="entidade" rows="4" cols="80" maxlength="1000"></textarea>
+    <textarea name="organizacao" rows="4" cols="80" maxlength="1000"></textarea>
     <br><br>
 
     <p>Tem outras observações que gostaria de compartilhar conosco? Por exemplo o processo de
     interação com o Insper, ou algo que o Insper devia ter previsto nesta proposta de parceria?
     </p>
-    <textarea name="outras" rows="4" cols="80" maxlength="1000"></textarea>
+    <textarea name="outros" rows="4" cols="80" maxlength="1000"></textarea>
     <br><br>
 
     <input type="submit" value="Enviar">
