--- a/projetos/templates/projetos/relatorios.html
+++ b/projetos/templates/projetos/relatorios.html
@@ -18,6 +18,11 @@
         <td><a href="{% url 'relatorio' 'alunos' 'HTML'%}">HTML</a></td>
         <td><a href="{% url 'relatorio' 'alunos' 'PDF'%}">PDF</a></td>
     </tr>
+    <tr>
+        <td>Feedbacks</td>
+        <td><a href="{% url 'relatorio' 'feedbacks' 'HTML'%}">HTML</a></td>
+        <td><a href="{% url 'relatorio' 'feedbacks' 'PDF'%}">PDF</a></td>
+    </tr>
 </table>
 <a href="{% url 'relatorio_backup'%}">Envia e-mail com todos os relatórios</a>
 <br>
